--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
-{ "engines":{
-  "node":"12.16.2"
-},
+{
+  "engines": {
+    "node": "12.16.2"
+  },
   "name": "project_2",
   "version": "1.0.0",
   "description": "",
@@ -8,9 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev":"nodemon"
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.15"
+  }
 }
