change header photo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "engines": {
-    "node": "12.16.2"
+    "node": "12.16.2",
+    "npm": "6.14.4"
   },
   "name": "project_2",
   "version": "1.0.0",
